err/punjab.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/punjab'...
Compiling './lib/python3.5/site-packages/punjab/__init__.py'...
***   File "./lib/python3.5/site-packages/punjab/__init__.py", line 72
    print "The html directory is needed."
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/punjab/jabber.py'...
***   File "./lib/python3.5/site-packages/punjab/jabber.py", line 9
    if version.major == 0 and version.minor < 5: raise Exception, "Unsupported Version of Twisted Words"
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/punjab/session.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (session.py, line 689)
Listing './lib/python3.5/site-packages/punjab/xmpp'...
Compiling './lib/python3.5/site-packages/punjab/xmpp/server.py'...
***   File "./lib/python3.5/site-packages/punjab/xmpp/server.py", line 139
    print "stream connected"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/punjab-0.15.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './share'...
Listing './share/python-wheels'...
